-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: core-svc
-
b26
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8272222 | 11.0.14-oracle | Harold Seigel | P4 | Resolved | Fixed | b01 |
| JDK-8268741 | 11.0.13 | Severin Gehwolf | P4 | Resolved | Fixed | b01 |
| JDK-8271612 | openjdk8u312 | Severin Gehwolf | P4 | Resolved | Fixed | b04 |
| JDK-8282614 | 8u341 | David Buck | P4 | Resolved | Fixed | b01 |
| JDK-8284596 | 8u331 | Anton Litvinov | P4 | Resolved | Fixed | b31 |
| JDK-8282709 | 8u321 | David Buck | P4 | Closed | Fixed | b34 |
https://github.com/openjdk/jdk/blob/d47a77d2d54ee8c41ef969b42b3336a646dffd7b/src/jdk.management/aix/native/libmanagement_ext/UnixOperatingSystem.c#L58
https://github.com/openjdk/jdk/blob/d47a77d2d54ee8c41ef969b42b3336a646dffd7b/src/jdk.management/macosx/native/libmanagement_ext/UnixOperatingSystem.c#L174
We should fix this.
- backported by
-
JDK-8268741 JNI functions incorrectly return a double after JDK-8265836
-
- Resolved
-
-
JDK-8271612 JNI functions incorrectly return a double after JDK-8265836
-
- Resolved
-
-
JDK-8272222 JNI functions incorrectly return a double after JDK-8265836
-
- Resolved
-
-
JDK-8282614 JNI functions incorrectly return a double after JDK-8265836
-
- Resolved
-
-
JDK-8284596 JNI functions incorrectly return a double after JDK-8265836
-
- Resolved
-
-
JDK-8282709 JNI functions incorrectly return a double after JDK-8265836
-
- Closed
-
- relates to
-
JDK-8265836 OperatingSystemImpl.getCpuLoad() returns incorrect CPU load inside a container
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/4e19090d
-
Commit
openjdk/jdk/2963c9e6
-
Review
openjdk/jdk11u-dev/31
-
Review
openjdk/jdk/4300