8268103: JNI functions incorrectly return a double after JDK-8265836

Reviewed-by: shade, andrew, phh